<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.team.hack.mipt.helper.mipthelper.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/status_of_downloading"
        android:weightSum="6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#fc5a03"
            android:onClick="onClick">

            <TextView
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/english"
                android:id="@+id/imageView1"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#a52a2a">

            <TextView
                android:text="@string/geometry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView2"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/geometry"
                android:id="@+id/imageView2"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:text="@string/physics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView3"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/physics"
                android:id="@+id/imageView3"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@color/colorRed">

            <TextView
                android:text="@string/informatic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button4"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView4"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/programming"
                android:id="@+id/imageView4"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#05b921"
            android:onClick="onPhysicsLabsClick">

            <TextView
                android:text="@string/laborotories"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button5"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView5"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/graph"
                android:id="@+id/imageView5"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#778899">

            <TextView
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button6"
                android:textColor="@color/colorJustWhite"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/imageView6"
                android:background="#00ffffff"
                android:gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/settings"
                android:id="@+id/imageView6"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:id="@+id/status_of_downloading" />
</RelativeLayout>
