<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_show_laborotor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.team.hack.mipt.helper.mipthelper.ShowLaborotorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="onDescriptionClick">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/prism"
                        android:id="@+id/imageView7" />

                    <TextView
                        android:text="@string/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorJustWhite"/>
                </LinearLayout>
            </RelativeLayout>

            <Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:weightSum="2">

            <Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="onSpecialQsClick">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/questionmark"
                        android:id="@+id/imageView8" />

                    <TextView
                        android:text="@string/main_questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorJustWhite"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:onClick="onLiteratureClick">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/book"
                        android:id="@+id/imageView9" />

                    <TextView
                        android:text="@string/literature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:gravity="center_horizontal"
                        android:textColor="@color/colorJustWhite"/>
                </LinearLayout>
            </RelativeLayout>

            <Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>